--- a/pools_specific_EDA/Open River/Open River Analysis.ipynb
+++ b/pools_specific_EDA/Open River/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "occupied-detroit",
+   "id": "little-excess",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "renewable-arena",
+   "execution_count": 3,
+   "id": "surface-lender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,12 +286,12 @@
     "                        for index,row in curset.iterrows():\n",
     "                            if pd.isnull(row[var]) or testing:\n",
     "                                try:\n",
-    "                                    prediction = predict(Dict[row[\"LOCATCD\"]])\n",
+    "                                    prediction = predict(Dict[row[\"SHEETBAR\"]])\n",
     "                                    #print(curset.loc[index,newcolumn],prediction)\n",
     "                                    curset.loc[index,newcolumn] = prediction\n",
     "                                except ZeroDivisionError:\n",
-    "                                    print(\"Couldn't predict for \", str(row[\"LOCATCD\"]))\n",
-    "                                    print(Dict[row[\"LOCATCD\"]])\n",
+    "                                    print(\"Couldn't predict for \", str(row[\"SHEETBAR\"]))\n",
+    "                                    print(Dict[row[\"SHEETBAR\"]])\n",
     "                                    curset.loc[index,newcolumn] = None\n",
     "                            else:\n",
     "                                curset.loc[index,newcolumn] = row[var]\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aboriginal-latino",
+   "id": "active-builder",
    "metadata": {},
    "source": [
     "Below cells are for debugging purposes"
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "veterinary-leisure",
+   "id": "interior-bankruptcy",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "linear-january",
+   "id": "expressed-amount",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "harmful-prompt",
+   "id": "caroline-controversy",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "regular-mercury",
+   "id": "associate-midwest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "accepted-program",
+   "id": "chinese-watershed",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-somewhere",
+   "id": "quarterly-adelaide",
    "metadata": {},
    "source": [
     "Now change the variable"
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "successful-device",
+   "id": "liquid-corrections",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "graduate-virginia",
+   "id": "coordinate-fighter",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "impossible-township",
+   "id": "beautiful-backup",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "floppy-material",
+   "id": "recognized-contents",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "plain-gross",
+   "id": "married-framework",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "coordinated-calcium",
+   "id": "dangerous-bolivia",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-spread",
+   "id": "classical-mercury",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -1220,8 +1220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "powerful-vietnam",
+   "execution_count": 4,
+   "id": "grand-disaster",
    "metadata": {
     "scrolled": true
    },
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "distinct-cheat",
+   "id": "civil-artwork",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "educated-tuning",
+   "id": "theoretical-reason",
    "metadata": {},
    "source": [
     "Checking negative values"
@@ -1512,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "located-liquid",
+   "id": "special-spectacular",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fixed-taxation",
+   "id": "raised-founder",
    "metadata": {},
    "source": [
     "Checking for weird location codes"
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "funky-lawrence",
+   "id": "distant-publication",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-scottish",
+   "id": "narrative-friendship",
    "metadata": {},
    "source": [
     "Insanity check for time seasons"
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "italic-minority",
+   "id": "hybrid-sydney",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reverse-correlation",
+   "id": "incoming-booking",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -1612,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "downtown-maker",
+   "id": "described-measure",
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "loved-insight",
+   "id": "expensive-server",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "incredible-colony",
+   "id": "immediate-uzbekistan",
    "metadata": {
     "scrolled": true
    },
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "continent-brush",
+   "id": "young-tennis",
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "isolated-arrangement",
+   "id": "shaped-acrylic",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "liked-ontario",
+   "id": "southwest-montana",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "external-lyric",
+   "id": "virgin-proceeding",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -1961,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "retired-surname",
+   "id": "judicial-feedback",
    "metadata": {
     "scrolled": true
    },
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "willing-peninsula",
+   "id": "wired-coupon",
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-country",
+   "id": "knowing-injury",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -2032,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "informal-accommodation",
+   "id": "greek-click",
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupational-heater",
+   "id": "cubic-ecuador",
    "metadata": {},
    "source": [
     "How much data is TDA ready?"
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "capital-variation",
+   "id": "unlikely-charleston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2082,7 +2082,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "legislative-encoding",
+   "id": "typical-complexity",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "subsequent-european",
+   "id": "regional-pickup",
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broke-mission",
+   "id": "metallic-livestock",
    "metadata": {},
    "source": [
     "#### Interpolating missing data (by year, by timecode)"
@@ -2145,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fiscal-continuity",
+   "id": "advanced-theta",
    "metadata": {
     "scrolled": true
    },
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fossil-incidence",
+   "id": "coral-current",
    "metadata": {},
    "source": [
     "Look at the interpolated dataset"
@@ -2179,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "dress-vacuum",
+   "id": "intermediate-bangkok",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "radical-marina",
+   "id": "statutory-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,7 +2442,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "presidential-auckland",
+   "id": "normal-tissue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aging-cliff",
+   "id": "veterinary-trinity",
    "metadata": {},
    "source": [
     "Now see how many rows we gained after interpolation"
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "suitable-breathing",
+   "id": "controlled-advocate",
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extreme-chart",
+   "id": "atlantic-portfolio",
    "metadata": {},
    "source": [
     "#### Checking how good we did with prediction on each variable, first we need to filter the data based off values we already have"
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "beneficial-baseball",
+   "id": "productive-registration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "pediatric-underground",
+   "id": "informational-alpha",
    "metadata": {},
    "outputs": [
     {
@@ -2792,7 +2792,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "contrary-introduction",
+   "id": "looking-parameter",
    "metadata": {},
    "outputs": [
     {
@@ -3080,7 +3080,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "medical-ending",
+   "id": "promising-school",
    "metadata": {},
    "outputs": [
     {
@@ -3149,7 +3149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absent-holly",
+   "id": "bound-killer",
    "metadata": {},
    "source": [
     "Looking at accuracy of TN"
@@ -3158,7 +3158,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "difficult-eligibility",
+   "id": "bulgarian-france",
    "metadata": {
     "scrolled": true
    },
@@ -3881,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "nervous-capability",
+   "id": "threaded-primary",
    "metadata": {},
    "outputs": [
     {
@@ -3924,7 +3924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-feeding",
+   "id": "derived-waterproof",
    "metadata": {},
    "source": [
     "Looking at accuracy of TP"
@@ -3933,7 +3933,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "helpful-chester",
+   "id": "behind-insight",
    "metadata": {
     "scrolled": true
    },
@@ -4658,7 +4658,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "authentic-transportation",
+   "id": "innovative-april",
    "metadata": {},
    "outputs": [
     {
@@ -4701,7 +4701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radio-cancellation",
+   "id": "conceptual-algeria",
    "metadata": {},
    "source": [
     "Looking at accuracy of VEL"
@@ -4710,7 +4710,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "toxic-chapter",
+   "id": "inclusive-secretariat",
    "metadata": {
     "scrolled": true
    },
@@ -5045,7 +5045,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "undefined-barbados",
+   "id": "intermediate-disposal",
    "metadata": {},
    "outputs": [
     {
@@ -5088,7 +5088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genetic-administrator",
+   "id": "sustainable-president",
    "metadata": {},
    "source": [
     "### Multivariate Regression Attempt on Open River"
@@ -5096,7 +5096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heavy-canal",
+   "id": "local-bhutan",
    "metadata": {},
    "source": [
     "Filter for non missing data"
@@ -5105,7 +5105,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "national-pierce",
+   "id": "mechanical-nothing",
    "metadata": {},
    "outputs": [
     {
@@ -5132,7 +5132,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "norwegian-estate",
+   "id": "allied-tourism",
    "metadata": {},
    "outputs": [
     {
@@ -5214,7 +5214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "configured-president",
+   "id": "quiet-imagination",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5222,7 +5222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "driving-region",
+   "id": "thorough-attention",
    "metadata": {},
    "outputs": [],
    "source": []
